testdata/baselines/reference/submodule/conformance/nodeAllowJsPackageSelfName(module=nodenext).errors.txt
error TS2209: The project root is ambiguous, but is required to resolve export map entry '.' in file 'package.json'. Supply the `rootDir` compiler option to disambiguate.
index.cjs(2,23): error TS2307: Cannot find module 'package' or its corresponding type declarations.
index.js(2,23): error TS2307: Cannot find module 'package' or its corresponding type declarations.
index.mjs(2,23): error TS2307: Cannot find module 'package' or its corresponding type declarations.


!!! error TS2209: The project root is ambiguous, but is required to resolve export map entry '.' in file 'package.json'. Supply the `rootDir` compiler option to disambiguate.
==== index.js (1 errors) ====
    // esm format file
    import * as self from "package";
                          ~~~~~~~~~
!!! error TS2307: Cannot find module 'package' or its corresponding type declarations.
    self;
==== index.mjs (1 errors) ====
    // esm format file
    import * as self from "package";
                          ~~~~~~~~~
!!! error TS2307: Cannot find module 'package' or its corresponding type declarations.
    self;
==== index.cjs (1 errors) ====
    // esm format file
    import * as self from "package";
                          ~~~~~~~~~
!!! error TS2307: Cannot find module 'package' or its corresponding type declarations.
    self;
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module",
        "exports": "./index.js"
    }